--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,4 @@
 <h1>Товары</h1>
-
 <form method="get">
     <input type="text" name="name" placeholder="Название" value="{{ request.GET.name }}">
     <select name="category">
@@ -20,6 +19,9 @@
 </form>
 <div class="sidebar">
     <a href="{% url 'create_product' %}">Создать товар</a>
+    <a href="{% url 'me' %}">Профиль пользователя</a>
+    <a href="/user/login">Login</a>
+    <a href="logout/">Logout</a>
 </div>
 <ul>
     {% for product in products %}
