--- a/templates/main.html
+++ b/templates/main.html
@@ -20,8 +20,8 @@
 <div class="sidebar">
     <a href="{% url 'create_product' %}">Создать товар</a>
     <a href="{% url 'me' %}">Профиль пользователя</a>
-    <a href="/user/login">Login</a>
-    <a href="logout/">Logout</a>
+    <a href="{% url 'my_login' %}">Login</a>
+    <a href="{% url 'logout' %}">Logout</a>
 </div>
 <ul>
     {% for product in products %}
